<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_theme">Темная тема</string>
    <string name="to_share">Поделиться приложением</string>
    <string name="to_write">Написать в поддержку</string>
    <string name="agrement">Пользовательское соглашение</string>
    <string name="android_course_url">https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="email">lumiamicrosoft@yandex.ru</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_via">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_development_course">Курс по Андроид-разработке!
https://practicum.yandex.ru/profile/android-developer-plus/</string>
    <string name="android_ofter_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="error_internet_text">Проблемы со связью.\n \nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error_search_text">Ничего не нашлось</string>
    <string name="refresh_button_text">Обновить</string>
    <string name="were_looking">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="music_time">00:00</string>
    <string name="tab_favorites">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>
    <string name="dialog_exit_title">Завершить создание плейлиста?</string>
    <string name="dialog_exit_message">Все несохраненные данные будут потеряны</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="dialog_finish">Завершить</string>
    <string name="back">Назад</string>
    <string name="share">Поделиться</string>
    <string name="more">Меню</string>
    <string name="empty_tracks">В этом плейлисте нет треков</string>
    <string name="media_library_title">Медиатека</string>
    <string name="create_playlist">Новый плейлист</string>
    <string name="media_empty_library">Ваша медиатека пуста</string>
    <string name="media_empty_playlists">Вы не создали ни одного плейлиста</string>
    <string name="playlist_tracks_count">%1$d треков</string>
    <string name="no_internet_message">Нет подключения к интернету</string>
    <string name="search_hint">подсказка</string>
    search_hint
</resources>