<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/color_background_start_activity"
    tools:context=".MainActivity">

  <FrameLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="start">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/margin_start"
          android:layout_marginTop="@dimen/margin_top"
          android:layout_marginBottom="@dimen/margin_bottom"
          android:text="@string/app_name"
          android:textColor="@color/whiteStart"
          android:textSize="@dimen/text_size_play"
          android:fontFamily="@font/ys_display_medium"/>
  </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginBottom="@dimen/button_icon_size_button"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginTop="@dimen/button_icon_size">
        <LinearLayout
            android:id="@+id/poisk"
            android:layout_weight="1"
            android:background="@drawable/root_shape"
            style="@style/ButtonStyle">
            <ImageView
                style="@style/IconStyle"
                android:src="@drawable/vector12"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/textView1"
                android:text="@string/search"
                style="@style/TextStyleStart" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/media"
            android:layout_weight="1"
            android:background="@drawable/root_shape"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginBottom="@dimen/margin_bottom"
            style="@style/ButtonStyle">
            <ImageView
                style="@style/IconStyle"
                android:src="@drawable/vector13"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/textView2"
                android:text="@string/media_library"
                style="@style/TextStyleStart" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/setting"
            android:layout_weight="1"
            android:background="@drawable/root_shape"
            style="@style/ButtonStyle">
            <ImageView
                style="@style/IconStyle"
                android:src="@drawable/vector14"
                tools:ignore="ContentDescription" />
            <TextView
                android:id="@+id/textView3"
                android:text="@string/settings"
                style="@style/TextStyleStart" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
