<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SettingActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_setting">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="@dimen/layout_width_back"
                android:layout_height="@dimen/layout_width_back"
                android:src="@drawable/baseline_arrow_back_24"
                android:scaleType="centerCrop"
                android:drawablePadding="@dimen/margin_bottom_back"
                android:backgroundTint="@color/white"
                android:layout_marginStart="@dimen/margin_bottom_back"
                android:layout_marginTop="@dimen/margin_bottom_back"
                android:layout_marginBottom="@dimen/margin_bottom_back"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                style="@style/TextStyleSetting"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginBottom="@dimen/margin_bottom"
                tools:ignore="HardcodedText"/>
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                style="@style/TextStyle_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/layout_margin_setting"
                android:layout_marginBottom="@dimen/layout_margin_setting"
                android:layout_weight="1"
                android:text="@string/black_theme"
                tools:ignore="HardcodedText" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/controlp"
                android:layout_width="56dp"
                android:layout_height="40dp"
                android:layout_marginEnd="6dp"
                android:backgroundTint="@color/white"
                android:drawablePadding="4dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">

            <TextView
                style="@style/TextStyle_menu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/layout_margin_setting"
                android:layout_marginBottom="@dimen/layout_margin_setting"
                android:layout_weight="1"
                android:text="@string/to_share"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/vector"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/vector"
                android:scaleType="centerCrop"
                android:drawablePadding="4dp"
                android:backgroundTint="@color/white"
                android:layout_marginEnd="6dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/to_write"
                style="@style/TextStyle_menu"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginBottom="@dimen/layout_margin_setting"
                android:layout_marginTop="@dimen/layout_margin_setting"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/light_mode1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/light_mode1"
                android:scaleType="centerCrop"
                android:drawablePadding="4dp"
                android:backgroundTint="@color/white"
                android:layout_marginEnd="6dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/agrement"
                style="@style/TextStyle_menu"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/layout_margin_setting"
                android:layout_marginBottom="@dimen/layout_margin_setting"
                tools:ignore="HardcodedText" />

            <ImageButton
                android:id="@+id/light_mode2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/light_mode2"
                android:scaleType="centerCrop"
                android:drawablePadding="4dp"
                android:backgroundTint="@color/white"
                android:layout_marginEnd="6dp"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>